Temporarily fixed home icon not visible

--- a/theme/assets/stylesheets/layouts/_header.scss
+++ b/theme/assets/stylesheets/layouts/_header.scss
@@ -26,7 +26,7 @@
 		}
 		
 		&.gotohome {
-			background-image: image-url("home.svg");
+			background-image: url("../images/home.svg");
 			background-repeat: no-repeat;
 			background-position: center center;
 			text-indent: -999em;
